--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -4,6 +4,21 @@ body
     font-family: 'Lato', sans-serif;
 }
 
+
+/* PARTENAIRE */
+
+.partenaires{
+    width: 100%;
+    background-color: gray;
+    display: flex;
+}
+
+img{
+    width: 12rem;
+    background-color: red;
+    justify-content: center;
+}
+
 #containerFooter
 {
     width: 100%;
@@ -61,7 +76,7 @@ body
 {
 content: "";
 background: #86E8DF;
-mix-blend-mode: exclusion;
+mix-blend-mode: hard-light;
 width: calc(100% + 18px);
 height: 0;
 position: absolute;
