--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -4,11 +4,17 @@ body
 }
 #badge
 {
-    background-color: rgb(255, 30, 30);
+    position: absolute;
+    top: 0;
+    background-color: red; /* Customize the background color */
+    color: white; /* Customize the text color */
+    border-radius: 50%; /* Optional: Makes it circular */
+    padding: 3px 6px; /* Optional: Adjust padding as needed */
+    /* background-color: rgb(255, 30, 30);
     color: white;
     border-radius: 50%;
-    padding: 5px 8px;
-    font-size: 14px;
+    padding: 5px 8px;*/
+    font-size: 14px; 
 
 }
 #container
@@ -24,9 +30,8 @@ body
     z-index: 1;
     justify-content: space-between;
     align-items: center;
-    padding: 15px 40px;
     box-sizing: border-box;
-    position: fixed;
+    /* position: fixed; */
     box-shadow: 0 1px 2px 0 rgba(60, 64, 67, 0.302), 0 2px 6px 2px rgba(60, 64, 67, 0.149); 
 }
 #shopName 
@@ -77,6 +82,8 @@ body
 }
 #user
 {
+    position: relative;
+
     display: flex;
     /* float: right; */
     align-items: center;
