--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,6 +14,16 @@
     text-align: center;
     align-content: center;
 }
+.promotion{
+    margin-top: 3rem;
+}
+.promotion img{
+    width: 100%;
+}
+footer{
+    margin-top: 10rem;
+}
+
 @media(max-width: 732px)
 {
     #containerSlider img
