--- a/assets/css/chrono.css
+++ b/assets/css/chrono.css
@@ -17,7 +17,8 @@ body{
     align-items: center;
     justify-content: center;
     height: 30rem;
-    margin-top: 10rem;
+    margin-top: 5rem;
+    margin-bottom: 5rem;
 }
 
 .affiche:hover{
@@ -26,7 +27,7 @@ body{
 
 
 
-.container{
+.container3{
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -36,6 +37,7 @@ body{
 }
 
 .description{
+    text-align: center;
 }
 
 .deal{
@@ -54,7 +56,7 @@ p{
 }
  
 
-.promotion{
+.promotion3{
     display: flex;
     justify-content: center;
     align-items: center;
