--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -81,6 +81,25 @@
 
 
 
+.card-img-top-wrapper {
+    position: relative;
+}
+
+.buy-button {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #000;
+    color: #fff;
+    padding: 10px 20px;
+    opacity: 0;
+    transition: opacity 0.3s ease;
+}
+
+.card-img-top-wrapper:hover .buy-button {
+    opacity: 1;
+}
 
 
 
